# elementary-gnome-icons

./: Makefile.am  README.md  autogen.sh  configure.ac  index.theme
RPM/: elementary-gnome-icon-theme.spec
