AC_INIT([elementary-gnome-icon-theme], 0.1.0, [https://github.com/embik/elementary-gnome-icons], [elementary-gnome-icon-theme])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects 1.9 tar-pax])
AC_PREFIX_DEFAULT(/usr/local)
AM_SILENT_RULES([yes])


AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
	elementary GNOME Icon Theme $VERSION
	========

	prefix:		${prefix}
	exec_prefix:	${exec_prefix}
	datarootdir:	${datarootdir}
])
